Final Commit ( Fixing the z-index on the navbar )

--- a/atk-fe/src/index.css
+++ b/atk-fe/src/index.css
@@ -808,7 +808,7 @@ a {
 .w3-bottom {
   position: fixed;
   width: 100%;
-  z-index: 1;
+  z-index: 3;
 }
 .w3-top {
   top: 0;
